add user entity; protect API with JWT